log
Fri 05 May 2023 06:39:52 PM UTC: 
 tests:  0|5
total_score: 0/70
937a048
Fri 05 May 2023 06:49:17 PM UTC: 
 sudoku.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ecd18d0
Fri 05 May 2023 06:55:06 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f126ff4
Fri 05 May 2023 06:55:32 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3c5805f
Fri 05 May 2023 07:23:50 PM UTC: 
 sudoku.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:67:15: error: called object is not a function or function pointer
   67 |       int k = 3(i/3) + j/3;
      |               ^
sudoku.c:68:15: error: called object is not a function or function pointer
   68 |       int p = 3(i%3) + j%3;
      |               ^
Compilation failed
a21f591
Fri 05 May 2023 07:26:15 PM UTC: 
 sudoku.c | 20 ++++++++++----------
 1 file changed, 10 insertions(+), 10 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:70:7: error: expected ‘,’ or ‘;’ before ‘if’
   70 |       if(n->sudo[k][p] != 0)
      |       ^~
sudoku.c:68:11: error: unused variable ‘p’ [-Werror=unused-variable]
   68 |       int p = 3*(f%3) + c%3
      |           ^
sudoku.c:67:11: error: unused variable ‘k’ [-Werror=unused-variable]
   67 |       int k = 3*(f/3) + c/3;
      |           ^
sudoku.c:48:36: error: unused variable ‘arraySub’ [-Werror=unused-variable]
   48 |   int arrayFila[10], arrayCol[10], arraySub[10];
      |                                    ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
14f69a2
Fri 05 May 2023 07:26:26 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:78:3: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   78 |   return ;
      |   ^~~~~~
sudoku.c:46:5: note: declared here
   46 | int is_valid(Node* n)
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
221b72d
Fri 05 May 2023 07:26:48 PM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:68:18: error: ‘k’ undeclared (first use in this function)
   68 |       if(n->sudo[k][p] != 0)
      |                  ^
sudoku.c:68:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:68:21: error: ‘p’ undeclared (first use in this function)
   68 |       if(n->sudo[k][p] != 0)
      |                     ^
sudoku.c:48:36: error: variable ‘arraySub’ set but not used [-Werror=unused-but-set-variable]
   48 |   int arrayFila[10], arrayCol[10], arraySub[10];
      |                                    ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1af817f
Fri 05 May 2023 07:26:57 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a135b4c
Fri 05 May 2023 07:28:51 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
427e572
